--- a/application/flask_CPU/static_cpu/css/style.css
+++ b/application/flask_CPU/static_cpu/css/style.css
@@ -3,3 +3,13 @@
 .main_text{
   text-align:center;
 }
+
+.heading:link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.heading:hover {
+  color: #555555;
+  text-decoration: none;
+}
