--- a/application/flask_math/templates/index_2.html
+++ b/application/flask_math/templates/index_2.html
@@ -3,30 +3,30 @@
 {% block body %}
 <br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.max_min_view')}}">極大値極小値</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.base_conversion_view')}}">進数変換</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.taylor_view')}}">テイラー展開</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.newton_method_view')}}">ニュートン法</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.Sieve_of_Eratosthenes_view')}}">ソクラテスのふるい</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.Euclidean_Algorithm_view')}}">ユークリッドの互除法</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.graph_view',dimension='2D',number=1)}}">グラフ</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.BMI_view')}}">BMI</a>
-  <a class="list-group-item list-group-item-action" href="{{url_for('view.instructions_view')}}">入力上の注意</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.max_min_view')}}">極大値極小値</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.base_conversion_view')}}">進数変換</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.taylor_view')}}">テイラー展開</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.newton_method_view')}}">ニュートン法</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.Sieve_of_Eratosthenes_view')}}">ソクラテスのふるい</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.Euclidean_Algorithm_view')}}">ユークリッドの互除法</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.graph_view',dimension='2D',number=1)}}">グラフ</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.BMI_view')}}">BMI</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.instructions_view')}}">入力上の注意</a>
 </div>
 <br>
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
     <li class="page-item">
-      <a class="page-link" href="{{url_for('view.index_view')}}" tabindex="-1" aria-disabled="true">Previous</a>
+      <a class="page-link" href="{{url_for('Math.index_view')}}"><<</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="{{url_for('view.index_view')}}">1</a>
+      <a class="page-link" href="{{url_for('Math.index_view')}}">1</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="{{url_for('view.index_2_view')}}">2</a>
+      <a class="page-link" href="{{url_for('Math.index_2_view')}}">2</a>
     </li>
     <li class="page-item disabled">
-      <a class="page-link" href="#">Next</a>
+      <a class="page-link" href="{{url_for('Math.index_2_view')}}">>></a>
     </li>
   </ul>
 </nav>
