--- a/application/main/static_main/css/style.css
+++ b/application/main/static_main/css/style.css
@@ -8,7 +8,7 @@
   font-family: "Mplus 1p";
 }
 
-.heading:link {
+.heading:link ,.heading:visited{
   color: rgb(0,0,0);
   text-decoration: none;
 }
