--- a/application/flask_math/templates/Apart.html
+++ b/application/flask_math/templates/Apart.html
@@ -15,9 +15,6 @@
 </form>
 
 <br><br><br>
-<h2>
-  <math>
-    <mn>{{anser}}</mn>
-  </math>
-</h2>
+
+<img src="https://chart.apis.google.com/chart?cht=tx&chl={{anser}}" alt="Error" width="500" height="auto"></img>
 {% endblock %}
