--- a/application/flask_math/templates/Apart.html
+++ b/application/flask_math/templates/Apart.html
@@ -1,10 +1,5 @@
 {% extends "layout.html" %}
 
-{% block script %}
-
-{% endblock %}
-
-
 {% block body %}
 <h2><a href="{{url_for('Math.Apart_view')}}" class="heading">部分分数分解</a></h2>
 <br>
@@ -18,15 +13,14 @@
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
-<script src="static/js/latex.js"></script>
-<img id="wrapper"></img><br><br><br>
-
 {% if init_flag==0 %}
-  {% if anser!="Error" %}
-    <img src="https://chart.apis.google.com/chart?cht=tx&chl={{anser}}"></img>
-  {% else %}
-   <h3>Error</h3>
-  {% endif %}
+<h4 class="latex">\[{{anser}}\]</h4>
+
+<br><br>
+<div class="center">
+  <h5>latex</h5>
+  <h5 class="latex">{{anser}}</h5>
+</div>
 {% endif %}
 
 {% endblock %}
