--- a/application/flask_math/templates/index_2.html
+++ b/application/flask_math/templates/index_2.html
@@ -11,12 +11,13 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.Sieve_of_Eratosthenes_view')}}">ソクラテスのふるい</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.Euclidean_Algorithm_view')}}">ユークリッドの互除法</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.graph_view')}}">グラフ</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.Factorial_view')}}">階乗</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.BMI_view')}}">BMI</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.instructions_view')}}">入力上の注意</a>
 </div>
 <br>
 <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center pagination-lg">
+  <ul class="pagination justify-content-center">
     <li class="page-item">
       <a class="page-link" href="{{url_for('Math.index_view')}}"><<</a>
     </li>
