--- a/application/flask_math/templates/Apart.html
+++ b/application/flask_math/templates/Apart.html
@@ -19,7 +19,9 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <h5 class="latex">{{anser}}</h5>
+  <pre>
+    <h5>{{anser}}</h5>
+  </pre>>
 </div>
 {% endif %}
 
