--- a/application/flask_math/templates/lim.html
+++ b/application/flask_math/templates/lim.html
@@ -16,16 +16,17 @@
 
   <br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form>
+</form><br>
 
-<br><br><br>
 
 {% if init_flag==0 %}
-  {% if anser!="Error" %}
-  <img src="https://chart.apis.google.com/chart?cht=tx&chl={{anser}}" width="45%" height="auto"></img>
-  {% else %}
-  <h3>Error</h3>
-  {% endif %}
+<h4 class="latex">\[{{anser}}\]</h4>
+
+<br><br>
+<div class="center">
+  <h5>latex</h5>
+  <h5 class="latex">{{anser}}</h5>
+</div>
 {% endif %}
 
 {% endblock %}
