--- a/application/flask_math/templates/prime_factorization.html
+++ b/application/flask_math/templates/prime_factorization.html
@@ -12,13 +12,18 @@
 
   <br>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
-</form>
+</form><br>
 
-<br><br><br>
-<h2>
-  <math>
-    <mn>{{anser}}</mn>
-  </math>
-</h2>
+{% if init_flag==0 %}
+<h4 class="latex">\[{{anser}}\]</h4>
+
+<br><br>
+<div class="center">
+  <h5>latex</h5>
+  <pre>
+    <h5>{{anser}}</h5>
+  </pre>>
+</div>
+{% endif %}
 
 {% endblock %}
