--- a/application/flask_math/templates/Apart.html
+++ b/application/flask_math/templates/Apart.html
@@ -19,9 +19,10 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <pre>
-    <h5>{{anser}}</h5>
-  </pre>>
+  <h5 class="latex" id="optional">{{anser}}</h5>
+  <br>
+  <button class="btn btn-outline-success" onclick="copy()">コピー</button>
+  <script src="static/js/copy.js"></script>
 </div>
 {% endif %}
 
