--- a/application/flask_math/templates/lim.html
+++ b/application/flask_math/templates/lim.html
@@ -25,7 +25,10 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <h5 class="latex">{{anser}}</h5>
+  <h5 class="latex" id="optional">{{anser}}</h5>
+  <br>
+  <button class="btn btn-outline-success" onclick="copy()">コピー</button>
+  <script src="static/js/copy.js"></script>
 </div>
 {% endif %}
 
