--- a/application/flask_math/templates/taylor.html
+++ b/application/flask_math/templates/taylor.html
@@ -35,10 +35,11 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <pre>
-    <h5>{{Anser[0]}}</h5>
-    <h5>{{Anser[1]}}</h5>
-  </pre>>
+  <h5 class="latex">{{Anser[0]}}</h5>
+  <h5 class="latex" id="optional">{{Anser[1]}}</h5>
+  <br>
+  <button class="btn btn-outline-success" onclick="copy()">コピー</button>
+  <script src="static/js/copy.js"></script>
 </div>
 {% endif %}
 
