--- a/application/flask_math/templates/prime_factorization.html
+++ b/application/flask_math/templates/prime_factorization.html
@@ -20,7 +20,7 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <h5 class="latex" id="optional">{{anser}}</h5>
+  <h5 class="latex" id="targetID">{{anser}}</h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
   <script src="static/js/copy.js"></script>
