--- a/application/flask_math/templates/taylor.html
+++ b/application/flask_math/templates/taylor.html
@@ -36,7 +36,7 @@
 <div class="center">
   <h5>latex</h5>
   <h5 class="latex">{{Anser[0]}}</h5>
-  <h5 class="latex" id="optional">{{Anser[1]}}</h5>
+  <h5 class="latex" id="targetID">{{Anser[1]}}</h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
   <script src="static/js/copy.js"></script>
