--- a/application/flask_math/templates/Apart.html
+++ b/application/flask_math/templates/Apart.html
@@ -7,7 +7,7 @@
 <form action='{{url_for("Math.Apart_view")}}' method="post" enctype="multipart/form-data">
   <div class="form-group">
     <label for="InputFormula">式を入力してください</label>
-    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula" onKeyUp="addValue()">
+    <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
   </div><br>
 
   <button type="submit" class="btn btn-primary btn-block">計算</button>
