--- a/application/flask_math/templates/derivative.html
+++ b/application/flask_math/templates/derivative.html
@@ -161,7 +161,7 @@
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <h5 class="latex" id="targetID">{{Anser[0]}}</h5>
+  <h5 class="latex">{{Anser[0]}}</h5>
   <h5 class="latex" id="targetID">{{Anser[1]}}</h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
