--- a/application/flask_math/templates/index_2.html
+++ b/application/flask_math/templates/index_2.html
@@ -12,6 +12,7 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.Euclidean_Algorithm_view')}}">ユークリッドの互除法</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.graph_view')}}">グラフ</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.Factorial_view')}}">階乗</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('Math.latex_view',input_type='python')}}">\(\LaTeX\)</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.BMI_view')}}">BMI</a>
   <a class="list-group-item list-group-item-action" href="{{url_for('Math.instructions_view')}}">入力上の注意</a>
 </div>
