--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -56,7 +56,8 @@
               <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}">ソクラテスのふるい</a>
               <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}">ユークリッドの互除法</a>
               <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}">グラフ</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>              
+              <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>
+              <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}">\(\LaTeX\)</a>
               <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}">BMI</a>
               <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
             </div>
