--- a/application/flask_math/templates/latex.html
+++ b/application/flask_math/templates/latex.html
@@ -34,6 +34,10 @@
 	<input type="text" name="input_type" value="{{input_type}}" hidden>
 </form>
 
+<script src="static/js/google_chart.js"></script>
+<div class="center">
+	<img id="wrapper"></img>
+</div>
 
 {% if init_flag==0 %}
 <h4 class="latex">\[{{anser}}\]</h4>
