--- a/application/flask_math/templates/matrix.html
+++ b/application/flask_math/templates/matrix.html
@@ -70,26 +70,26 @@
     </div>
     {% endif %}
 
-    {% if type=="A^-1" %}
+    {% if type=="A^{-1}" %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio3" value="A^-1" checked="checked">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio3" value="A^{-1}" checked="checked">
       <label class="form-check-label" for="inlineRadio3">逆行列</label>
     </div>
     {% else %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio3" value="A^-1">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio3" value="A^{-1}">
       <label class="form-check-label" for="inlineRadio3">逆行列</label>
     </div>
     {% endif %}
 
-    {% if type=="A~" %}
+    {% if type=="\widetilde{A}" %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio4" value="A~" checked="checked">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio4" value="\widetilde{A}" checked="checked">
       <label class="form-check-label" for="inlineRadio4">余因子行列</label>
     </div>
     {% else %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio4" value="A~">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio4" value="\widetilde{A}">
       <label class="form-check-label" for="inlineRadio4">余因子行列</label>
     </div>
     {% endif %}
@@ -154,14 +154,14 @@
     </div>
     {% endif %}
 
-    {% if type=="P^-1AP" %}
+    {% if type=="P^{-1}AP" %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio10" value="P^-1AP" checked="checked">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio10" value="P^{-1}AP" checked="checked">
       <label class="form-check-label" for="inlineRadio10">対角行列</label>
     </div>
     {% else %}
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="type" id="inlineRadio10" value="P^-1AP">
+      <input class="form-check-input" type="radio" name="type" id="inlineRadio10" value="P^{-1}AP">
       <label class="form-check-label" for="inlineRadio10">対角行列</label>
     </div>
     {% endif %}
@@ -173,12 +173,12 @@
 
 
 {% if init_flag==0 %}
-<h4 class="latex">\[{{Anser[0]}}\]</h4>
+<h4 class="latex">\[{{type}}={{anser}}\]</h4>
 
 <br><br>
 <div class="center">
   <h5>latex</h5>
-  <h5 class="latex" id="targetID">{{Anser[0]}}</h5>
+  <h5 class="latex" id="targetID">{{type}}={{anser}}</h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
   <script src="static/js/copy.js"></script>
