--- a/application/flask_math/templates/matrix.html
+++ b/application/flask_math/templates/matrix.html
@@ -177,8 +177,8 @@
 
 <br><br>
 <div class="center">
-  <h5>latex</h5>
-  <h5 class="latex" id="targetID">{{type}}={{anser}}</h5>
+  <h5>\(\LaTeX\)</h5>
+  <h5 class="latex" id="targetID"><pre>{{type}}={{anser}}</pre></h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
   <script src="static/js/copy.js"></script>
