--- a/application/flask_math/templates/lim.html
+++ b/application/flask_math/templates/lim.html
@@ -12,9 +12,8 @@
   <div class="form-group">
     <label for="Input_a">ｘが近づく値</label>
     <input type="text" name="a" class="form-control" id="Input_a" value="{{a}}" placeholder="x">
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
