--- a/application/flask_math/templates/max_min.html
+++ b/application/flask_math/templates/max_min.html
@@ -13,9 +13,8 @@
       </div>
       <input type="text" name="formula" value="{{formula}}" placeholder="function" class="form-control" aria-describedby="basic-addon1">
     </div>
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
