--- a/application/flask_math/templates/Euclidean_Algorithm.html
+++ b/application/flask_math/templates/Euclidean_Algorithm.html
@@ -12,9 +12,8 @@
   <div class="form-group">
     <label for="InputNumberY">整数を入力してください</label>
     <input type="text" name="number_y" class="form-control" id="InputNumberY" value="{{number_y}}" placeholder="natural number">
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
