--- a/application/flask_math/templates/Expand.html
+++ b/application/flask_math/templates/Expand.html
@@ -8,9 +8,8 @@
   <div class="form-group">
     <label for="InputFormula">式を入力してください</label>
     <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="formula">
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
