--- a/application/flask_math/templates/Sieve_of_Eratosthenes.html
+++ b/application/flask_math/templates/Sieve_of_Eratosthenes.html
@@ -8,9 +8,8 @@
   <div class="form-group">
     <label for="InputNumber">2以上の自然数を入力してください</label>
     <input type="text" name="number" class="form-control" id="InputNumber" value="{{number}}" placeholder="natural number">
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
