--- a/application/flask_math/templates/diff_equation.html
+++ b/application/flask_math/templates/diff_equation.html
@@ -13,9 +13,8 @@
         <span class="input-group-text" id="basic-addon2">=0</span>
       </div>
     </div>
-  </div>
-
-  <br>
+  </div><br>
+  
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
