--- a/application/flask_math/static/css/style.css
+++ b/application/flask_math/static/css/style.css
@@ -49,3 +49,18 @@
   width: 100%;
   height: auto;
 }
+
+.wrapper {
+	min-height: 100vh;
+	position: relative;
+	padding-bottom: 250px;
+	box-sizing: border-box;
+}
+
+.footer {
+  width: 100%;
+  background-color: darkgray;
+  padding: 15px 0;
+	position: absolute;
+	bottom: 0;
+}
