--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -21,68 +21,110 @@
   {% endblock%}
 </head>
 
-<body>
-  <div class="container-fluid">
-    <!-- ナビゲーションバー -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
-              <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
-              <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}">積分</a>
-              <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}">微分</a>
-              <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}">極限</a>
-              <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}">行列</a>
-              <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}">行列の演算</a>
-              <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}">方程式</a>
-              <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}">連立方程式</a>
-              <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}">微分方程式</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}">展開</a>
-              <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}">因数分解</a>
-              <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}">素因数分解</a>
-              <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}">極大値極小値</a>
-              <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}">進数変換</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}">部分分数分解</a>
-              <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}">テイラー展開</a>              
-              <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}">ニュートン法</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}">ソクラテスのふるい</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}">ユークリッドの互除法</a>
-              <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}">グラフ</a>
-              <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>
-              <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}">\(\LaTeX\)</a>
-              <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}">BMI</a>
-              <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
-            </div>
-          </li>
-        </ul>
+<body>     
+  <div class="wrapper">
+    <div class="container-fluid">
+      <!-- ナビゲーションバー -->
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <a class="navbar-brand" href="{{url_for('Math.index_view')}}">Flask Math</a>
+        <div class="collapse navbar-collapse justify-content-end">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/kouki7910/Flask-Math" target="_blank">
+                <img src="static/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">MENU</a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
+                <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}">積分</a>
+                <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}">微分</a>
+                <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}">極限</a>
+                <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}">行列</a>
+                <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}">行列の演算</a>
+                <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}">方程式</a>
+                <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}">連立方程式</a>
+                <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}">微分方程式</a>
+                <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}">展開</a>
+                <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}">因数分解</a>
+                <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}">素因数分解</a>
+                <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}">極大値極小値</a>
+                <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}">進数変換</a>
+                <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}">部分分数分解</a>
+                <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}">テイラー展開</a>
+                <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}">ニュートン法</a>
+                <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}">ソクラテスのふるい</a>
+                <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}">ユークリッドの互除法</a>
+                <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}">グラフ</a>
+                <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}">階乗</a>
+                <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}">\(\LaTeX\)</a>
+                <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}">BMI</a>
+                <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}">入力上の注意</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+  
+      <!-- flash -->
+      {% for message in get_flashed_messages() %}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-    </nav>
-
-    <!-- flash -->
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      {{message}}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+      {% endfor %}
+  
+      <!--本文 -->
+      <div class="blog-body">
+        {% block body %}
+  
+        {% endblock%}
+      </div>
     </div>
-    {% endfor %}
+    
+    <!-- フッター -->      
+    <footer class="footer"> 
+      <div style="column-count: 6;">
+        <a class="dropdown-item" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}"><small>積分</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}"><small>微分</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}"><small>極限</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}"><small>行列</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}"><small>行列の演算</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}"><small>方程式</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}"><small>連立方程式</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}"><small>微分方程式</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}"><small>展開</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}"><small>因数分解</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}"><small>素因数分解</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}"><small>極大値極小値</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}"><small>進数変換</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}"><small>部分分数分解</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}"><small>テイラー展開</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}"><small>ニュートン法</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}"><small>ソクラテスのふるい</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}"><small>ユークリッドの互除法</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}"><small>グラフ</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}"><small>階乗</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}"><small>\(\LaTeX\)</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}"><small>BMI</small></a>
+        <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}"><small>入力上の注意</small></a>
+      </div>
 
-    <!--本文 -->
-    <div class="blog-body">
-      {% block body %}
-
-      {% endblock%}
-    </div>
-
+      <div class="center">
+        <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
+      </div>
+      <script type="text/javascript">
+        date = new Date();
+        thisYear = date.getFullYear();
+        document.getElementById("thisYear").innerHTML=thisYear;
+      </script>
+    </footer>
+  
   </div>
 </body>
 
