--- a/application/flask_math/templates/layout.html
+++ b/application/flask_math/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=1024" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flask Math</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -35,8 +35,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">MENU</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{{ url_for('main.index_view')}}">トップページ</a>
                 <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}">積分</a>
@@ -88,41 +87,45 @@
     
     <!-- フッター -->      
     <footer class="footer"> 
-      <div style="column-count: 6;">
-        <a class="dropdown-item" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.integral_view',dimension='2D')}}"><small>積分</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.derivative_view') }}"><small>微分</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.lim_view') }}"><small>極限</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.matrix_view') }}"><small>行列</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.matrix_2_view') }}"><small>行列の演算</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.equation_view') }}"><small>方程式</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.equations_view',number=1)}}"><small>連立方程式</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.diff_equation_view') }}"><small>微分方程式</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.Expand_view') }}"><small>展開</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.factorization_view') }}"><small>因数分解</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.prime_factorization_view') }}"><small>素因数分解</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.max_min_view') }}"><small>極大値極小値</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.base_conversion_view') }}"><small>進数変換</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.Apart_view') }}"><small>部分分数分解</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.taylor_view') }}"><small>テイラー展開</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.newton_method_view') }}"><small>ニュートン法</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}"><small>ソクラテスのふるい</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.Euclidean_Algorithm_view') }}"><small>ユークリッドの互除法</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.graph_view') }}"><small>グラフ</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.Factorial_view') }}"><small>階乗</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.latex_view',input_type='python') }}"><small>\(\LaTeX\)</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.BMI_view') }}"><small>BMI</small></a>
-        <a class="dropdown-item" href="{{ url_for('Math.instructions_view') }}"><small>入力上の注意</small></a>
-      </div>
+      <ul class="footer_ul">        
+        <a style="display: block;" class="heading" href="{{ url_for('main.index_view')}}"><small>トップページ</small></a></li>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.integral_view',dimension='2D')}}"><small>積分</small>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.derivative_view') }}"><small>微分</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.lim_view') }}"><small>極限</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.matrix_view') }}"><small>行列</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.matrix_2_view') }}"><small>行列の演算</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.equation_view') }}"><small>方程式</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.equations_view',number=1)}}"><small>連立方程式</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.diff_equation_view') }}"><small>微分方程式</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.Expand_view') }}"><small>展開</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.factorization_view') }}"><small>因数分解</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.prime_factorization_view') }}"><small>素因数分解</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.max_min_view') }}"><small>極大値極小値</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.base_conversion_view') }}"><small>進数変換</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.Apart_view') }}"><small>部分分数分解</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.taylor_view') }}"><small>テイラー展開</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.newton_method_view') }}"><small>ニュートン法</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.Sieve_of_Eratosthenes_view') }}"><small>ソクラテスのふるい</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.Euclidean_Algorithm_view') }}"><small>ユークリッドの互除法</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.graph_view') }}"><small>グラフ</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.Factorial_view') }}"><small>階乗</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.latex_view',input_type='python') }}"><small>\(\LaTeX\)</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.BMI_view') }}"><small>BMI</small></a>
+        <a style="display: block;" class="heading" href="{{ url_for('Math.instructions_view') }}"><small>入力上の注意</small></a>
+      </ul>
 
       <div class="center">
         <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
+        <script type="text/javascript">
+          date = new Date();
+          thisYear = date.getFullYear();
+          document.getElementById("thisYear").innerHTML = thisYear;
+        </script>
+        <a class="heading" href="https://github.com/kouki7910/Flask-Math" target="_blank">
+          <img src="static/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
+        </a>
       </div>
-      <script type="text/javascript">
-        date = new Date();
-        thisYear = date.getFullYear();
-        document.getElementById("thisYear").innerHTML=thisYear;
-      </script>
+
     </footer>
   
   </div>
