--- a/application/flask_CPU/static_cpu/css/style.css
+++ b/application/flask_CPU/static_cpu/css/style.css
@@ -44,3 +44,13 @@
   background-color: darkgray;
   padding: 15px 0;
 }
+
+.footer_ul{
+  column-count:6;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .footer_ul{
+    column-count:2;
+  }
+}
