--- a/application/flask_arduino/static_arduino/css/style.css
+++ b/application/flask_arduino/static_arduino/css/style.css
@@ -23,6 +23,7 @@
   height: auto;
 }
 
+
 /* footer */
 .wrapper {
   display: flex;
@@ -34,4 +35,14 @@
   margin-top: auto;
   background-color: darkgray;
   padding: 15px 0;
+}
+
+.footer_ul{
+  column-count:5;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .footer_ul{
+    column-count:2;
+  }
 }
