--- a/application/flask_math/templates/instructions.html
+++ b/application/flask_math/templates/instructions.html
@@ -108,6 +108,7 @@
       <textarea class="form-control" id="InputMatrix" name=matrix rows="3" disabled>
 ○0○○1○ー2××
 ー3○ー4○○5××
+※oはスペース
       </textarea>
     </div>
     <!-- Ar,Acの入力 -->
