--- a/application/flask_math/templates/integral.html
+++ b/application/flask_math/templates/integral.html
@@ -18,15 +18,15 @@
 
 <br><br><br>
 
-<form action='{{url_for("Math.integral_view")}}' method="post" enctype="multipart/form-data">
+<form action='{{url_for("Math.integral_view",dimension=dimension)}}' method="post">
   <!-- 関数などの入力 -->
   <div class="form-group">
-    <label for="InputFormula">被積分関数f(x)を入力してください</label>
+    <label for="InputFormula">被積分関数<small>\(f(x)\)</small>を入力してください</label>
     <div class="input-group">
       <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">f(x)=</span>
+        <small class="input-group-text"><small>\(f(x)=\)</small></small>
       </div>
-      <input type="text" name="formula" value="{{formula}}" placeholder="function" class="form-control" aria-describedby="basic-addon1">
+      <input type="text" name="formula" class="form-control" id="InputFormula" value="{{formula}}" placeholder="function">
     </div>
   </div>
   {% if dimension=="2D" %}
@@ -40,26 +40,26 @@
   </div>
   {% elif dimension=="3D" %}
   <div class="form-group">
-    <label for="InputUpperEnd_x">xの上端を入力してください</label>
+    <label for="InputUpperEnd_x">\(x\)の上端を入力してください</label>
     <input type="text" name="upper_end_x" class="form-control" id="InputUpperEnd_x" value="{{upper_end_x}}" placeholder="upper end x">
   </div>
   <div class="form-group">
-    <label for="InputLowerEnd_x">xの下端を入力してください</label>
+    <label for="InputLowerEnd_x">\(x\)の下端を入力してください</label>
     <input type="text" name="lower_end_x" class="form-control" id="InputLowerEnd_x" value="{{lower_end_x}}" placeholder="lower end x">
   </div>
   <div class="form-group">
-    <label for="InputUpperEnd_y">yの上端を入力してください</label>
+    <label for="InputUpperEnd_y">\(y\)の上端を入力してください</label>
     <input type="text" name="upper_end_y" class="form-control" id="InputUpperEnd_y" value="{{upper_end_y}}" placeholder="upper end y">
   </div>
   <div class="form-group">
-    <label for="InputLowerEnd_y">yの下端を入力してください</label>
+    <label for="InputLowerEnd_y">\(y\)の下端を入力してください</label>
     <input type="text" name="lower_end_y" class="form-control" id="InputLowerEnd_y" value="{{lower_end_y}}" placeholder="lower end y">
   </div>
   {% endif %}
 
   <!-- 演算の選択 -->
   <div class="center">
-    {% if dimension=="2D" %}
+  {% if dimension=="2D" %}
     {% if type=="indefinite_integral" %}
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="type" id="inlineRadio2" value="indefinite_integral" checked="checked">
@@ -96,7 +96,7 @@
     </div>
     {% endif %}
 
-    {% elif dimension=="3D" %}
+  {% elif dimension=="3D" %}
     {% if type=="multiple_integral_1" %}
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="type" id="inlineRadio2" value="multiple_integral_1" checked="checked">
@@ -120,21 +120,21 @@
       <label class="form-check-label" for="inlineRadio2">重積分(浮動小数点数)　　</label>
     </div>
     {% endif %}
-    {% endif %}
+  {% endif %}
   </div><br>
 
-  <input type="text" name="dimension" value="{{dimension}}" hidden>
   <button type="submit" class="btn btn-primary btn-block">計算</button>
 </form><br>
 
 
 {% if init_flag==0 %}
-<h4 class="latex">\[{{anser}}\]</h4>
-
-<br><br>
 <div class="center">
+  <h4 class="latex">\({{anser}}\)</h4>
+  <br><br>
   <h5>\(\LaTeX\)</h5>
-  <h5 class="latex" id="targetID"><pre>{{anser}}</pre></h5>
+  <h5 class="latex" id="targetID">
+    <pre>{{anser}}</pre>
+  </h5>
   <br>
   <button class="btn btn-outline-success" onclick="copy()">コピー</button>
   <script src="static/js/copy.js"></script>
