--- a/application/flask_math/static/css/style.css
+++ b/application/flask_math/static/css/style.css
@@ -8,7 +8,8 @@
   font-family: "Mplus 1p";
 }
 
-.heading:link ,.heading:visited{
+.heading:link,
+.heading:visited {
   color: #000000;
   text-decoration: none;
 }
@@ -21,7 +22,6 @@
 .heading2:link {
   text-decoration: none;
 }
-
 
 .left {
   float: left;
@@ -39,13 +39,13 @@
   text-align: center;
 }
 
-.latex{
+.latex {
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
 }
 
-.graph{
+.graph {
   width: 100%;
   height: auto;
 }
@@ -63,39 +63,40 @@
   padding: 15px 0;
 }
 
-.footer_ul{
-  column-count:6;
+.footer_ul {
+  column-count: 6;
 }
 
 @media only screen and (max-device-width: 480px) {
-  .footer_ul{
-    column-count:2;
+  .footer_ul {
+    column-count: 2;
   }
 }
 
-
+/* radioButton */
 .radioArea input[type="radio"] {
-  width         : 13pt;        /* 大きさ：横 */
-  height        : 13pt;        /* 大きさ：縦 */
-  vertical-align: top;         /* 並び位置   */
-  display       : none;        /* チェックボックス非表示 */
+  width: 13pt; /* 大きさ：横 */
+  height: 13pt; /* 大きさ：縦 */
+  vertical-align: top; /* 並び位置   */
+  display: none; /* チェックボックス非表示 */
 }
- /* --- チェックボックス直後のlabel --- */
+/* --- チェックボックス直後のlabel --- */
 .radioArea input[type="radio"] + label {
-  padding       : 0 4px;                      /* labelの余白 */
-  font-size     : 13pt;                       /* labelの文字サイズ */
-  font-weight   : bold;                       /* 文字太さ   */
-  border        : 2px solid rgba(255, 0, 0, 0.51); /* labelの枠線 */
-  border-radius : 5px;                        /* labelの角丸 */
-  background    : #ffffff;                    /* lebelの背景 */
-  cursor        : pointer;                    /* カーソル設定 */
-  transition    : .2s;                        /* なめらか変化 */
+  padding: 0 4px; /* labelの余白 */
+  font-size: 13pt; /* labelの文字サイズ */
+  border: 2px solid rgb(108, 117, 125); /* labelの枠線 */
+  border-radius: 5px; /* labelの角丸 */
+  background: #ffffff; /* lebelの背景 */
+  cursor: pointer; /* カーソル設定 */
+  transition: 0.2s; /* なめらか変化 */
 }
- /* --- 選択されたチェックボックス直後のlabel --- */
+/* --- 選択されたチェックボックス直後のlabel --- */
 .radioArea input[type="radio"]:checked + label {
-  background    : rgba(255, 0, 0, 0.51);                    /* lebelの背景 */
+  color: #ffffff;
+  background: rgb(108, 117, 125); /* lebelの背景 */
 }
- /* --- 選択されていないチェックボックス直後のlabelにマウスが乗った --- */
+/* --- 選択されていないチェックボックス直後のlabelにマウスが乗った --- */
 .radioArea input[type="radio"]:not(:checked) + label:hover {
-  background    : rgba(255, 0, 0, 0.40);     /* lebelの背景 */
+  color: #ffffff;
+  background: rgba(108, 117, 125, 0.4); /* lebelの背景 */
 }
